Item views: fix error when accessing attached view from non-delegates

Ensure that the view is set on the relevant attached objects before
QQmlComponent::completeCreate() is called, which would otherwise result
in a TypeError because the view would be set too late.

Fixes: QTBUG-104026
Task-number: QTBUG-98718
Change-Id: Ic65370bd4534e7452f2377ab4d60a74badf02079
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit dbd108a7997f129004bbed523db75d4aa9d0ab6c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>